tests/miz/fail/parser/fail_parser_import_missing_alias_001.miz
import std.core as;
theorem T: thesis;
